[package]
name = "middleman"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["server", "http1", "tcp", "client", 'stream'] }
hyper-rustls = "0.24.1"
tokio = {  version = "1.33.0", features = ["macros", "rt-multi-thread", "rt", "full"] }
tokio-util = {version = "0.7.9", features=["compat"]}
clap = { version = "4.4.6", features = ["derive"] }
toml = "0.8.2"
serde = { version = "1.0.136" , features = ["derive"]}
httparse = "1.8.0"
rustls = "0.21.7"
