[package]
name = "middleman"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = { version = "1.2.0", features = ["server", "http1", "client"] }
http-body-util = "0.1.0"
tokio = {  version = "1.33.0", features = ["macros", "rt-multi-thread", "rt", "full"] }
tokio-util = {version = "0.7.9", features=["compat"]}
clap = { version = "4.4.6", features = ["derive"] }
toml = "0.8.2"
serde = { version = "1.0.136" , features = ["derive"]}
httparse = "1.8.0"
rustls = "0.21.7"
bytes = "1.5.0"
pin-project = "1.1.4"
pin-project-lite = "0.2.13"
http = "1.0.0"
